1.Put dark mode button and fixed functionality using .dark class on every section. 2.used flexbox align-items and justify-items to ram button to end of navbar. 3.put in a new image for darkmode.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     "sidebar hero hero"
     "links links links";
 }
+.dark .gridcontainer {
+    background-color:rgb(19, 4, 53);
+    color:antiquewhite;
+}
 .image {
     grid-area:image;
 }
@@ -23,25 +27,54 @@ body {
     width:auto;
     object-fit: cover;
 }
+
 .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
     grid-area: navbar;
     background-color: aquamarine;
     color:black;
+}
+.navbar #Darkmode
+{
+    background-color:white;
+    border-radius: 50%;
+    height:30px;
+}
+.dark .navbar {
+    background-color: black;
+    color:aquamarine;
 }
 .sidebar {
     grid-area: sidebar;
     background-color: rgb(0, 51, 103);
 }
+.dark .sidebar {
+    grid-area: sidebar;
+    background-color: rgb(3, 44, 94);
+    color:aliceblue;
+}
 .hero {
     grid-area: hero;
     background-color: aliceblue;
+    color:black;
     background-image: url('bird.jpg');
     background-size: cover;
     background-position: center;
 }
+.dark .hero {
+    background-color: rgb(18, 87, 148);
+    color:beige;
+    background-image:url('dark.jpg');
+}
 .links {
     grid-area: links;
     background-color: black;
+    color: white;
+}
+.dark .links {
+    background-color: rgb(3, 11, 108);
     color: white;
 }
 .links a {
